--- a/date/2025-08/page-3.htm
+++ b/date/2025-08/page-3.htm
@@ -88,6 +88,7 @@
                 <div id="navigation" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                                                 <li><a href="/">首页</a></li>
+                                                <li><a href="/free-nodes/">免费节点</a></li>
                                                 <li><a href="/paid-subscribe/">推荐机场</a></li>
                                                 <li><a href="/news/">新闻资讯</a></li>
                                                 <li><a href="/client.htm">客户端</a></li>
@@ -250,16 +251,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-152229.htm" title="手机科学上网全攻略：解锁网络自由与安全新境界">手机科学上网全攻略：解锁网络自由与安全新境界</a></li>
-                        <li class="py-2"><a href="/news/article-147422.htm" title="水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧">水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧</a></li>
-                        <li class="py-2"><a href="/news/article-151533.htm" title="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验">Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验</a></li>
-                        <li class="py-2"><a href="/news/article-150126.htm" title="美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南">美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南</a></li>
-                        <li class="py-2"><a href="/news/article-152960.htm" title="爱的碰撞：解码亲密关系中的冲突艺术">爱的碰撞：解码亲密关系中的冲突艺术</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-11-clash-v2ray-ss-ssr.htm" title="梯子机场 - 8月11日19.7M/S|免费V2ray/Clash/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月11日19.7M/S|免费V2ray/Clash/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-4-node-share.htm" title="梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-node-github.htm" title="梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-150472.htm" title="打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧">打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧</a></li>
                         <li class="py-2"><a href="/news/article-153703.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
+                        <li class="py-2"><a href="/news/article-154417.htm" title="安卓V2Ray详细配置指南：开启自由网络之旅">安卓V2Ray详细配置指南：开启自由网络之旅</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-clash-stash-node.htm" title="梯子机场 - 8月21日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月21日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-6-clash-verge-rev-github.htm" title="梯子机场 - 8月6日18.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月6日18.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-12-clash-stash.htm" title="梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-19-clash-node.htm" title="梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-16-clash-verge-rev-nodes.htm" title="梯子机场 - 8月16日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月16日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-11-clash-v2ray-ss-ssr.htm" title="梯子机场 - 8月11日19.7M/S|免费V2ray/Clash/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月11日19.7M/S|免费V2ray/Clash/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-148374.htm" title="群晖路由器：解锁网络自由的智能网关">群晖路由器：解锁网络自由的智能网关</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-vless-node-share.htm" title="顶级代理服务器 - 9月14日22M/S|免费Shadowrocket/SSR/Clash/V2ray订阅机场推荐">顶级代理服务器 - 9月14日22M/S|免费Shadowrocket/SSR/Clash/V2ray订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -271,7 +272,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -291,6 +292,7 @@
                         <div class="col-md-6">
                                                 <p>
                                                 <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
                                                 <a href="/news/">新闻资讯</a> |
                                                 <a href="/client.htm">客户端</a> |
