--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -85,6 +85,7 @@
                 <div id="navigation" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                                                 <li><a href="/">首页</a></li>
+                                                <li><a href="/free-nodes/">免费节点</a></li>
                                                 <li><a href="/paid-subscribe/">推荐机场</a></li>
                                                 <li><a href="/news/">新闻资讯</a></li>
                                                 <li><a href="/client.htm">客户端</a></li>
@@ -110,6 +111,34 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-13">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-8-13-clash-node.htm" class="xcblog-blog-url">
+                                        <img alt="梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐" src="/uploads/20240808/7d0be8a96d9c222e4064fdcc3ac9db44.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-8-13-clash-node.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐                                        </h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、美国、新加坡、欧洲、韩国、香港、日本等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-12">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-8-12-clash-stash.htm" class="xcblog-blog-url">
+                                        <img alt="梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐" src="/uploads/20240808/72ce8b2c5fc779665a5819f4e072adda.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-8-12-clash-stash.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐                                        </h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了美国、韩国、香港、新加坡、加拿大、欧洲、日本等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-11">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-8-11-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
@@ -232,16 +261,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-13-clash-node.htm" title="梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-6-clash-verge-rev-github.htm" title="梯子机场 - 8月6日18.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月6日18.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，VPN节点购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-18-clash-stash-node.htm" title="梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-clash-stash.htm" title="梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-149862.htm" title="解密Clash：从全名解析到精通配置的科学上网指南">解密Clash：从全名解析到精通配置的科学上网指南</a></li>
+                        <li class="py-2"><a href="/news/article-153329.htm" title="突破网络边界：贴吧自由访问的全方位科学上网指南">突破网络边界：贴吧自由访问的全方位科学上网指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-9-clash-stash.htm" title="梯子机场 - 8月9日18.7M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 8月9日18.7M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-154786.htm" title="V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路">V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-4-node-share.htm" title="梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-149099.htm" title="突破连接限制：全方位解决Clash机场设备过多难题">突破连接限制：全方位解决Clash机场设备过多难题</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-10-clash-meta-github.htm" title="梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-148374.htm" title="群晖路由器：解锁网络自由的智能网关">群晖路由器：解锁网络自由的智能网关</a></li>
-                        <li class="py-2"><a href="/news/article-151890.htm" title="如何配置Vmess协议：完整的使用与优化指南">如何配置Vmess协议：完整的使用与优化指南</a></li>
+                        <li class="py-2"><a href="/news/article-152960.htm" title="爱的碰撞：解码亲密关系中的冲突艺术">爱的碰撞：解码亲密关系中的冲突艺术</a></li>
+                        <li class="py-2"><a href="/news/article-150909.htm" title="深度解析 Shadowrocket PP 2019：从入门到精通的完整指南">深度解析 Shadowrocket PP 2019：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-16-clash-verge-rev-nodes.htm" title="梯子机场 - 8月16日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月16日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-151533.htm" title="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验">Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-vless-node-share.htm" title="顶级代理服务器 - 9月14日22M/S|免费Shadowrocket/SSR/Clash/V2ray订阅机场推荐">顶级代理服务器 - 9月14日22M/S|免费Shadowrocket/SSR/Clash/V2ray订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -253,7 +282,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -273,6 +302,7 @@
                         <div class="col-md-6">
                                                 <p>
                                                 <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
                                                 <a href="/news/">新闻资讯</a> |
                                                 <a href="/client.htm">客户端</a> |
